remove unused .gitkeep files from various directories

--- a/.gitignore
+++ b/.gitignore
@@ -15,46 +15,19 @@
 # ┌─────────────────────────────────────────┐
 # │ EIDOSIAN FORGE PROJECTS - NESTED REPOS  │
 # └─────────────────────────────────────────┘
-# Each forge project lives its own dimensional plane
+# Each forge project exists in its own dimensional plane
 # Structured ignorance prevents recursive tracking chaos
-/.github/
-/.vscode/
-/agentic_chess/
-/archived/
-/code_forge/
-/diagnostics/
-/doc_forge/
-/eidos_code_lens/
-/eidos_venv/
-/eidosian_songs/
-/figlet_forge/
-/file_forge/
-/glyph_forge/
-/knowledge_forge/
-/medium_articles/
-/memory_forge/
-/metadata_forge/
-/mkey/
-/ollama_forge/
-/refactor_forge/
-/repo_forge/
-/sms_forge/
-/terminal_forge/
-/test_forge/
-/version_forge/
-/viz_forge/
 
-# Root-level forge configuration - reference only
-/code_extensions_old.sh
-/code_extensions.sh
-/eidosian_roadmap.md
-/eidosian-forge.code-workspace
-/forge_projects_overview.md
-/global_info.py
-/README.md
-/repo_restructure.sh
-/TODO
-/version.py
+# Any directory ending with _forge, anywhere in the tree
+**/*_forge/
+
+# Development environment configurations
+**/.github/
+**/.vscode/
+
+# Script files for environment setup and management
+*extension*.sh
+*restructure*.sh
 
 # ┌─────────────────────────────────────────┐
 # │ OPERATING SYSTEM DETRITUS               │
