--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -234,7 +234,7 @@
       "source.organizeImports": "explicit"
     }
   },
-  "python.analysis.typeCheckingMode": "basic",
+  "python.analysis.typeCheckingMode": "strict",
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": true,
   "python.terminal.shellIntegration.enabled": true,
