Add new WAL and SHM files for SQLite databases and update VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -315,5 +315,6 @@
     "typeguards",
     "unbased"
   ],
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "python.REPL.enableREPLSmartSend": false
 }
