chore: review knowledge, llm, prompt forges

--- a/prompt_forge/pyproject.toml
+++ b/prompt_forge/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "knowledge_forge"
+name = "prompt_forge"
 version = "0.1.0"
-description = "Eidosian Knowledge Forge - Ontology, Graph Management, and Reasoning."
+description = "Eidosian Prompt Forge - Prompt Engineering, Management, and Optimization."
 readme = "README.md"
 requires-python = ">=3.12"
 license = "MIT"
@@ -13,7 +13,7 @@ authors = [
     { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
     { name = "Eidos", email = "syntheticeidos@gmail.com" },
 ]
-keywords = ["knowledge-graph", "ontology", "rdf", "owl", "reasoning"]
+keywords = ["prompt-engineering", "jinja2", "llm", "templates"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -21,23 +21,17 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "networkx>=3.0",
+    "jinja2>=3.1.0",
     "pydantic>=2.6.0",
-    "rdflib>=7.0.0",   # Semantic Web standard
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
-    "black>=24.0.0",
-]
-viz = [
-    "matplotlib>=3.8.0",
-    "pyvis>=0.3.2",
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["libs", "projects", "knowledge_core.py"] # Temp structure fix
+packages = ["src/prompt_forge"] # Anticipating structure
 
 [tool.pytest.ini_options]
 minversion = "6.0"
