--- a/llm_forge/pyproject.toml
+++ b/llm_forge/pyproject.toml
@@ -1,85 +1,52 @@
 [build-system]
-requires      = [ "setuptools>=61.0.0", "wheel" ]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "llm_forge"
 version = "0.1.0"
-description = "A tool for comparing different LLM models based on natural language prompts"
+description = "Eidosian LLM Forge - Model Abstraction, Comparison, and Fine-tuning Interfaces."
 readme = "README.md"
-requires-python = ">=3.8"
-license = { text = "MIT" }
-authors = [ { name = "Eidosian Forge", email = "contact@example.com" } ]
+requires-python = ">=3.12"
+license = "MIT"
+authors = [
+    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
+    { name = "Eidos", email = "syntheticeidos@gmail.com" },
+]
+keywords = ["llm", "ai", "comparison", "fine-tuning", "openai", "huggingface"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.12",
 ]
-dynamic = [ "dependencies" ]
+dependencies = [
+    "openai>=1.0.0",
+    "transformers>=4.39.0",
+    "torch>=2.1.0",
+    "rich>=13.0.0",
+    "typer>=0.9.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "black>=24.0.0",
+    "flake8>=7.0.0",
+    "mypy>=1.8.0",
+]
 
 [project.scripts]
 llm-forge = "llm_forge.cli.main:main"
 
-[project.urls]
-"Homepage"    = "https://github.com/example/llm_forge"
-"Bug Tracker" = "https://github.com/example/llm_forge/issues"
+[tool.hatch.build.targets.wheel]
+packages = ["src/llm_forge"]
 
-[tool.setuptools.dynamic]
-dependencies = { file = [ "requirements.txt" ] }
-
-[tool.setuptools.packages.find]
-where   = [ "src" ]
-include = [ "llm_forge*" ]
-exclude = [ "test*" ]
-
-[tool.setuptools.package-data]
-"llm_forge.templates" = [ "*.jinja", "*.txt", "*.html" ]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.0.0,<8.0.0",
-    "pytest-cov>=4.0.0,<5.0.0",
-    "mypy>=1.0.0,<2.0.0",
-    "black>=23.0.0,<26.0.0",
-    "isort>=5.12.0,<6.0.0",
-    "ruff>=0.0.275,<0.1.0",
-    "pre-commit>=3.0.0,<4.0.0",
-]
-docs = [
-    "sphinx>=6.0.0,<7.0.0",
-    "sphinx-rtd-theme>=1.2.0,<2.0.0",
-    "sphinx-autodoc-typehints>=1.22.0,<2.0.0",
-    "myst-parser>=2.0.0,<3.0.0",
-]
-testing = [
-    "pytest>=7.0.0,<8.0.0",
-    "pytest-cov>=4.0.0,<5.0.0",
-    "tox>=4.0.0,<5.0.0",
-]
-all = [ "llm_forge[dev,docs,testing]" ]
-
-[tool.isort]
-profile     = "black"
-line_length = 88
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = ["tests"]
 
 [tool.black]
-line-length    = 88
-target-version = [ "py38", "py39", "py310", "py311", "py312" ]
-
-[tool.mypy]
-python_version           = "3.8"
-warn_return_any          = true
-warn_unused_configs      = true
-disallow_untyped_defs    = true
-disallow_incomplete_defs = true
-
-[tool.ruff]
-line-length    = 88
-target-version = "py38"
-select         = [ "E", "F", "B", "I", "N", "W" ]
-ignore         = [  ]
+line-length = 88
+target-version = ["py312"]
