--- a/eidos_mcp/pyproject.toml
+++ b/eidos_mcp/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "file_forge"
-version = "0.1.0"
-description = "Eidosian File Forge - Advanced File System Operations."
+name = "eidos_mcp"
+version = "0.6.0"
+description = "Eidosian MCP Server - The Central Nervous System connecting all Forges."
 readme = "README.md"
 requires-python = ">=3.12"
 license = "MIT"
@@ -13,7 +13,7 @@ authors = [
     { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
     { name = "Eidos", email = "syntheticeidos@gmail.com" },
 ]
-keywords = ["files", "filesystem", "search", "grep"]
+keywords = ["mcp", "model-context-protocol", "server", "middleware"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -21,7 +21,12 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
+    "mcp[server]>=0.1.0",
+    "fastapi>=0.110.0",
+    "uvicorn>=0.27.0",
     "pydantic>=2.6.0",
+    "python-dotenv>=1.0.0",
+    # It depends on ALL other forges, but they are local
 ]
 
 [project.optional-dependencies]
@@ -29,8 +34,11 @@ dev = [
     "pytest>=8.0.0",
 ]
 
+[project.scripts]
+eidos-mcp = "eidos_mcp.eidos_mcp_server:mcp.run"
+
 [tool.hatch.build.targets.wheel]
-packages = ["file_core.py"]
+packages = ["."]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
