--- a/game_forge/pyproject.toml
+++ b/game_forge/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "file_forge"
+name = "game_forge"
 version = "0.1.0"
-description = "Eidosian File Forge - Advanced File System Operations."
+description = "Eidosian Game Forge - Simulations and Game Environments."
 readme = "README.md"
 requires-python = ">=3.12"
 license = "MIT"
@@ -13,15 +13,16 @@ authors = [
     { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
     { name = "Eidos", email = "syntheticeidos@gmail.com" },
 ]
-keywords = ["files", "filesystem", "search", "grep"]
+keywords = ["game-dev", "simulation", "chess", "pygame"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "pydantic>=2.6.0",
+    "pygame>=2.5.0",
+    "numpy>=1.26.0",
 ]
 
 [project.optional-dependencies]
@@ -30,7 +31,7 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["file_core.py"]
+packages = ["src/agentic_chess", "src/eidosian_universe", "src/gene_particles"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
