fix(git): Add node_modules/ to .gitignore to prevent excessive tracking

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ pyrightconfig.json
 Pipfile
 Pipfile.lock
 poetry.lock
+node_modules/
 
 # ┌─────────────────────────────────────────┐
 # │ OS DETRITUS                             │
